--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.7.0",
+    "date-fns": "^2.29.3",
     "solid-js": "^1.6.9",
+    "solid-outside-click-handler": "^0.1.0",
     "solid-start": "^0.2.19",
     "undici": "^5.15.1"
   },
