--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "solid-js": "^1.6.9",
     "solid-outside-click-handler": "^0.1.0",
     "solid-start": "^0.2.19",
+    "solid-start-netlify": "0.1.0-alpha.37",
     "undici": "^5.15.1"
   },
   "engines": {
